--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.batch.job.enabled=true
+spring.batch.jdbc.initialize-schema=always
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.platform=mysql
