--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+
 spring.batch.job.enabled=true
-spring.batch.jdbc.initialize-schema=always
+spring.batch.jdbc.initialize-schema=ALWAYS
 
-spring.jpa.hibernate.ddl-auto=create
 
-spring.sql.init.platform=mysql
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
